--- a/06-Code/Team6_TicSell/nbproject/private/private.properties
+++ b/06-Code/Team6_TicSell/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/Users/luisy/Payara_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/luisy/Payara_Server/glassfish
 j2ee.server.instance=[C:\\Users\\luisy\\Payara_Server\\glassfish;C:\\Users\\luisy\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
 j2ee.server.middleware=C:/Users/luisy/Payara_Server
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\luisy\\AppData\\Roaming\\NetBeans\\14\\build.properties
