--- a/06-Code/Team6_TicSell/nbproject/project.properties
+++ b/06-Code/Team6_TicSell/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.json-simple-1.1.1-sources.jar=lib\\json-simple-1.1.1-sources.jar
+file.reference.mongo-java-driver-3.12.11.jar=lib\\mongo-java-driver-3.12.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +44,10 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.json-simple-1.1.1-sources.jar}:\
+    ${file.reference.mongo-java-driver-3.12.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +74,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
