--- a/06-Code/Team6_TicSell/nbproject/private/private.properties
+++ b/06-Code/Team6_TicSell/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Users\\luisy\\Payara_Server\\glassfish;C:\\Users\\luis
 j2ee.server.middleware=C:/Users/luisy/Payara_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\luisy\\AppData\\Roaming\\NetBeans\\14\\build.properties
