--- a/06-Code/Team6_TicSell/nbproject/project.properties
+++ b/06-Code/Team6_TicSell/nbproject/project.properties
@@ -29,8 +29,11 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\Lili\\Downloads\\Team6_TicSell\\lib\\gson-2.8.2.jar
 file.reference.json-simple-1.1.1-sources.jar=lib\\json-simple-1.1.1-sources.jar
+file.reference.json-simple-1.1.1-sources.jar-1=C:\\Users\\Lili\\Downloads\\Team6_TicSell\\lib\\json-simple-1.1.1-sources.jar
 file.reference.mongo-java-driver-3.12.11.jar=lib\\mongo-java-driver-3.12.11.jar
+file.reference.mongo-java-driver-3.12.11.jar-1=C:\\Users\\Lili\\Downloads\\Team6_TicSell\\lib\\mongo-java-driver-3.12.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +50,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.json-simple-1.1.1-sources.jar}:\
-    ${file.reference.mongo-java-driver-3.12.11.jar}
+    ${file.reference.mongo-java-driver-3.12.11.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.json-simple-1.1.1-sources.jar-1}:\
+    ${file.reference.mongo-java-driver-3.12.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
