--- a/06-Code/Team6_TicSell/nbproject/private/private.properties
+++ b/06-Code/Team6_TicSell/nbproject/private/private.properties
@@ -1,10 +1,13 @@
-deploy.ant.properties.file=C:\\Users\\Lili\\AppData\\Roaming\\NetBeans\\14\\config\\PayaraEE6\\Properties\\pfv3-1621046063.properties
+deploy.ant.properties.file=C:\\Users\\luisy\\AppData\\Roaming\\NetBeans\\14\\config\\PayaraEE6\\Properties\\pfv3-728632156.properties
+file.reference.gson-2.8.2.jar-1=C:\\Users\\luisy\\Team6_TicSell\\06-Code\\Team6_TicSell\\lib\\gson-2.8.2.jar
+file.reference.json-simple-1.1.1-sources.jar-1=C:\\Users\\luisy\\Team6_TicSell\\06-Code\\Team6_TicSell\\lib\\json-simple-1.1.1-sources.jar
+file.reference.mongo-java-driver-3.12.11.jar-1=C:\\Users\\luisy\\Team6_TicSell\\06-Code\\Team6_TicSell\\lib\\mongo-java-driver-3.12.11.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/payara/payara-5.2022.2/payara5/glassfish/domains/domain1
-j2ee.server.home=C:/payara/payara-5.2022.2/payara5/glassfish
-j2ee.server.instance=[C:\\payara\\payara-5.2022.2\\payara5\\glassfish;C:\\payara\\payara-5.2022.2\\payara5\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
-j2ee.server.middleware=C:/payara/payara-5.2022.2/payara5
+j2ee.server.domain=C:/Users/luisy/Payara_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/luisy/Payara_Server/glassfish
+j2ee.server.instance=[C:\\Users\\luisy\\Payara_Server\\glassfish;C:\\Users\\luisy\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/luisy/Payara_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Lili\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\luisy\\AppData\\Roaming\\NetBeans\\14\\build.properties
