--- a/06-Code/Team6_TicSell/nbproject/project.properties
+++ b/06-Code/Team6_TicSell/nbproject/project.properties
@@ -48,12 +48,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.json-simple-1.1.1-sources.jar}:\
-    ${file.reference.mongo-java-driver-3.12.11.jar}:\
     ${file.reference.gson-2.8.2.jar-1}:\
     ${file.reference.json-simple-1.1.1-sources.jar-1}:\
-    ${file.reference.mongo-java-driver-3.12.11.jar-1}
+    ${file.reference.mongo-java-driver-3.12.11.jar-1}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.json-simple-1.1.1-sources.jar}:\
+    ${file.reference.mongo-java-driver-3.12.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
