--- a/06-Code/Team6_TicSell/nbproject/private/private.properties
+++ b/06-Code/Team6_TicSell/nbproject/private/private.properties
@@ -10,4 +10,4 @@ j2ee.server.middleware=C:/Users/luisy/Payara_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\luisy\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\Lili\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
