--- a/06-Code/02WebServices/TicSell/package.json
+++ b/06-Code/02WebServices/TicSell/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ticsell",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node"
@@ -19,5 +18,7 @@
     "express": "^4.18.2",
     "moongose": "^1.0.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
