--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 /06-Code/Team6_TicSell/dist/
 /06-Code/Team6TicSell/nbproject/private/
 /06-Code/Team6TicSell/build/
+/06-Code/02ServiciosWeb
