--- a/06-Code/02WebServices/TicSell/package.json
+++ b/06-Code/02WebServices/TicSell/package.json
@@ -16,9 +16,9 @@
     "@babel/preset-env": "^7.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose-unique-validator": "^3.1.0",
     "moongose": "^1.0.0",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "description": ""
 }
