--- a/06-Code/02WebServices/TicSell/package.json
+++ b/06-Code/02WebServices/TicSell/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node"
+    "dev": "nodemon src/index.js --exec babel-node",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
