--- a/06-Code/02WebServices/TicSell/package.json
+++ b/06-Code/02WebServices/TicSell/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
-    "build": "babel src -d dist",
-    "start": "node dist/index.js"
+    "build": "babel src -d public",
+    "start": "node public/index.js"
   },
   "keywords": [],
   "author": "",
