--- a/06-Code/02WebServices/TicSell/.env
+++ b/06-Code/02WebServices/TicSell/.env
@@ -1,5 +1,5 @@
-URI = mongodb+srv://SilviaTeam6:DevelopTeam6@cluster0.jmp7qzy.mongodb.net/ticsell?retryWrites=true&w=majority
+URI = mongodb+srv://luis:espe2022@yepezluis.cssvbxy.mongodb.net/?retryWrites=true&w=majority
 
-PORT = 3006
+PORT = 3023
 
     
